--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -3,9 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
 *,*::before,*::after{box-sizing:border-box}ul[class],ol[class]{padding:0}body,h1,h2,h3,h4,p,ul[class],ol[class],figure,blockquote,dl,dd{margin:0}html{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;line-height:1.5}ul[class],ol[class]{list-style:none}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}article>*+*{margin-top:1em}input,button,textarea,select{font:inherit}img:not([alt]){filter:blur(10px)}@media(prefers-reduced-motion:reduce){*{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
 button {background: none; border: none; outline: none; cursor: pointer;}
-body {font: bold 16px/20px 'Mulish', Arial, sans-serif; min-width: 320px; padding: 0;}
+body {font: 16px/20px 'Mulish', Arial, sans-serif; min-width: 320px; padding: 0;}
+p {margin: 0 0 10px;}
 img {max-width: 100%;}
-.container {margin: 0 auto; padding: 0 20px; max-width: 1144px;}
+.container {margin: 0 auto; padding: 0 20px; max-width: 1184px;}
 .hide {display: none;}
 a {color: #c00; text-decoration: none;
     &:hover {color: #202020;}
@@ -86,10 +87,125 @@ a {color: #c00; text-decoration: none;
     }
 }
 
+/*product*/
+.product-single {
+    &__gallery {margin: 0 -20px 16px; 
+        .product-gallery {margin-bottom: 16px; text-align: center;}
+        .product-gallery img {max-height: 320px; margin: 0 auto;}
+        .product-gallery-thumbs {max-width: 148px; margin: 0 auto; 
+            .swiper-slide:after {background: rgba($color: #fff, $alpha: 0.3); position: absolute; top: 0; left: 0; right: 0; bottom: 0; content: "";}
+            .is-active:after {display: none;}
+            img {height: 44px;}
+        }
+        .product-gallery .swiper-button-prev {position: absolute; top: 0; bottom: 0; left: 0; background: rgba($color: #202020, $alpha: 0.3) url('data:image/svg+xml,\
+            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="19" viewBox="0 0 11 19" fill="none">
+<g filter="url(#filter0_d)">
+<path d="M1.21875 7.875L0.09375 9L9.09375 18L10.2188 16.875L2.34375 9L10.2188 1.125L9.09375 0L4.59375 4.5L1.21875 7.875Z" fill="white"/>
+</g>
+<defs>
+<filter id="filter0_d" x="0.09375" y="0" width="10.125" height="19" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="1"/>
+<feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.33 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>') no-repeat 50%; margin: 0; height: 100%; width: 30px;}
+        .product-gallery .swiper-button-next {position: absolute; top: 0; bottom: 0; right: 0; background: rgba($color: #202020, $alpha: 0.3) url('data:image/svg+xml,\
+            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="19" viewBox="0 0 11 19" fill="none">
+<g filter="url(#filter0_d)">
+<path d="M9.78125 10.125L10.9062 9L1.8125 0L0.6875 1.125L8.5625 9L0.6875 16.875L1.8125 18L6.40625 13.5L9.78125 10.125Z" fill="white"/>
+</g>
+<defs>
+<filter id="filter0_d" x="0.6875" y="0" width="10.2188" height="19" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="1"/>
+<feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.33 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>') no-repeat 50%; margin: 0; height: 100%; width: 30px;}
+    }
+    &__title {font: 21px/29px 'Goudy Bookletter 1911'; text-align: center; margin-bottom: 22px;
+        @media screen and (min-width:768px){
+            text-align: left; font-size: 32px; line-height: 44px; margin-bottom: 38px;
+        }    
+    }
+    &__price {font-weight: bold; font-size: 24px; line-height: 30px; color: #c00; display: inline-block; vertical-align: top; margin: 0 11px 54px 0;}
+    &__policies {display: inline-block; vertical-align: super; font-size: 13px; line-height: 16px;}
+    &__info {
+         label {font-weight: bold; font-size: 21px; line-height: 26px;}
+         form {background: rgba(32, 32, 32, 0.05); margin: 0 -20px 22px; padding: 20px 20px 36px;}
+         select {margin: 16px 0 12px;}
+    }
+    .product-single__quantity {display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-direction: row;flex-direction: row;}
+    .quantity-input__element {background: #fff; height: 48px; width: 63px; text-align: center; border: 1px solid #D8D8D8; box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.13);}
+    .quantity-input__button {background: #fff; height: 48px; width: 44px; border: 1px solid #D8D8D8; box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.13); border-radius: 0px 4px 4px 0px; display: inline-block;
+        &:first-child {border-radius: 4px 0px 0px 4px;}
+    }
+    .product-single__action {display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-direction: row;flex-direction: row;
+        .button-primary {margin-left: 11px;}
+    }
+    @media screen and (min-width:768px){
+        display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-direction: row;flex-direction: row;
+        &__gallery {position: relative; flex-basis: 59.7%; max-width: 59.7%; padding-right: 20px;}
+        .product-gallery img {max-height: none;}
+        .product-gallery .swiper-button-prev, .product-gallery .swiper-button-next {width: 48px;}
+        &__gallery .product-gallery-thumbs {max-width: 224px; margin: 0 auto 0 0;}
+        .product-gallery-thumbs img {height: auto;}
+        &__info {position: relative; flex-basis: 40.3%; max-width: 40.3%;} 
+        .product-single__gallery {margin: 0;}
+        &__info select {width: 293px; margin: 8px 0 18px;}
+        &__info form {margin: 0 0 46px; background: none; padding: 0;}
+        &__price {font-size: 36px; line-height: 45px;}
+        .product-single__action .button-primary {width: 262px; margin-left: 15px;}
+    }        
+}
+
 /*buttons*/
-.button-primary {background: #c00; color: #fff; padding: 14px 22px 13px 24px; box-shadow: inset 0px -2px 2px rgba(32, 32, 32, 0.33); border-radius: 4px; border: 1px solid #950000; font-weight: bold; font-size: 16px; line-height: 20px; text-shadow: 0px -1px 0px rgba(32, 32, 32, 0.33); display: inline-block;
+.button-primary {background: #c00; color: #fff; padding: 14px 22px 12px 24px; box-shadow: inset 0px -2px 2px rgba(32, 32, 32, 0.33); border-radius: 4px; border: 1px solid #950000; font-weight: bold; font-size: 16px; line-height: 20px; text-shadow: 0px -1px 0px rgba(32, 32, 32, 0.33); display: inline-block; cursor: pointer;
     &:hover {background-color: #950000; color: #fff;}
 }
-.button-secondary {background: #fff; color: #202020; padding: 13px 16px 12px 17px; border-radius: 4px; border: 1px solid #202020; font-weight: bold; font-size: 16px; line-height: 20px; display: inline-block;
+.button-secondary {background: #fff; color: #202020; padding: 13px 16px 12px 17px; border-radius: 4px; border: 1px solid #202020; font-weight: bold; font-size: 16px; line-height: 20px; display: inline-block; cursor: pointer;
     &:hover {background-color: #202020; color: #fff;}
 }
+
+
+select { 
+    display: block; 
+    font-size: 12px; line-height: 15px; color: #000;      
+    padding: 15px 11px; width: 100%; 
+    max-width: 100%; 
+    box-sizing: border-box; 
+    margin: 0; 
+    border: 1px solid #d8d8d8;
+    box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.13);
+    border-radius: 4px;
+     -moz-appearance: none;
+     -webkit-appearance: none;
+     appearance: none;
+     background-color: #fff; 
+    background-image: url('data:image/svg+xml,\
+    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="7" viewBox="0 0 12 7" fill="none">
+    <path d="M5.25 6.1875L6 6.9375L12 0.875L11.25 0.125L6 5.4375L0.75 0.1875L0 0.9375L3 3.9375L5.25 6.1875Z" fill="#202020"/>\</svg>'); 
+    background-repeat: no-repeat;
+    background-position: right .7em top 50%;
+    background-size: .65em auto; 
+    } 
+     select::-ms-expand { display: none; } 
+     select:hover { border-color: #888; } 
+     select:focus { border-color: #aaa; 
+     box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+     box-shadow: 0 0 0 3px -moz-mac-focusring; 
+    color: #222;
+     outline: none; 
+    } 
+     select option { font-weight:normal; } 
+     *[dir="rtl"] select, :root:lang(ar) select, :root:lang(iw) select { 
+    background-position: left .7em top 50%, 0 0; 
+    padding: .6em .8em .5em 1.4em; 
+    }
