--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -142,11 +142,6 @@ a {color: #c00; text-decoration: none;
          form {background: rgba(32, 32, 32, 0.05); margin: 0 -20px 22px; padding: 20px 20px 36px;}
          select {margin: 16px 0 12px;}
     }
-    .product-single__quantity {display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-direction: row;flex-direction: row;}
-    .quantity-input__element {background: #fff; height: 48px; width: 63px; text-align: center; border: 1px solid #D8D8D8; box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.13);}
-    .quantity-input__button {background: #fff; height: 48px; width: 44px; border: 1px solid #D8D8D8; box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.13); border-radius: 0px 4px 4px 0px; display: inline-block;
-        &:first-child {border-radius: 4px 0px 0px 4px;}
-    }
     .product-single__action {display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-direction: row;flex-direction: row;
         .button-primary {margin-left: 11px;}
     }
@@ -165,12 +160,52 @@ a {color: #c00; text-decoration: none;
         .product-single__action .button-primary {width: 262px; margin-left: 15px;}
     }        
 }
+.quantity {display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-direction: row;flex-direction: row;}
+.quantity-input__element {background: #fff; height: 48px; width: 63px; text-align: center; border: 1px solid #D8D8D8; box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.13);}
+.quantity-input__button {background: #fff; height: 48px; width: 44px; border: 1px solid #D8D8D8; box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.13); border-radius: 0px 4px 4px 0px; display: inline-block;
+    &:first-child {border-radius: 4px 0px 0px 4px;}
+}
 
+/*cart*/
+.stage--cart {visibility: hidden; position: fixed; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden; z-index: 150;
+    .drawer {position: fixed; transform: translateX(100%); transition: all .3s cubic-bezier(.46,.01,.32,1);top: 0; bottom: 0; right: 0; width: 100%; max-width: 360px; background: #fff; z-index: 99;}
+    &.is-open {visibility: visible;
+        .stage__overlay {opacity: 0.8; z-index: 98;}
+        .drawer {transform: translateX(0);}
+        .cart-drawer {height: 100%;
+            &__header {background: rgba(32, 32, 32, 0.05); padding: 24px 20px 16px; position: relative; color: #B4B4B4; font-weight: bold; font-size: 13px; line-height: 16px;
+                .cart-drawer__close-button {width: 40px; height: 40px; display: block; position: absolute; top: 7px; right: 17px;
+                    &:before {content: ""; border-top: 1px solid #202020; width: 34px; display: block; transform: rotate(45deg); position: absolute; top: 20px; left: 0;}
+                    &:after {content: ""; border-top: 1px solid #202020; width: 34px; display: block; transform: rotate(-45deg); position: absolute; top: 20px; left: 0;}
+                }
+                .cart-drawer__title {display: none;}
+            }
+            &__item {display: -ms-flexbox;display: flex; padding: 18px 28px 14px 18px;}
+            &__content {overflow: auto; height: calc(100% - 164px);}
+            .cart-item__price {font-weight: bold; font-size: 16px; line-height: 20px; color: #c00;}
+            .quantity {margin-top: 16px;}
+            .quantity-input__button, .quantity-input__element {height: 32px;}
+            .quantity-input__button {width: 32px;}
+            &__name {font-weight: bold; font-size: 13px; line-height: 20px;}
+            &__media {width: 81px; margin-right: 16px; img {width: 65px; height: auto; border-radius: 50%;}}
+            &__footer {background: rgba(32, 32, 32, 0.05); padding: 19px 18px 15px; position: relative;
+                .cart-drawer__ctas {display: -ms-flexbox;display: flex;}
+                .button-primary {padding: 14px 18px 12px; margin-left: auto;}
+            }
+            .cart-drawer__totals {display: -ms-flexbox;display: flex; font-weight: bold;
+                .cart-drawer__subtotal-value {margin-left: auto;}
+            }
+        }
+    }    
+}
+.cart-drawer__empty-text, .cart-drawer__no-cookies-text, .cart-drawer__notice {display: none;}
+.stage__overlay {display: block; position: absolute;left: 0;top: 0;width: 100%;height: 100%;background: #202020;opacity: 0;}
+    
 /*buttons*/
 .button-primary {background: #c00; color: #fff; padding: 14px 22px 12px 24px; box-shadow: inset 0px -2px 2px rgba(32, 32, 32, 0.33); border-radius: 4px; border: 1px solid #950000; font-weight: bold; font-size: 16px; line-height: 20px; text-shadow: 0px -1px 0px rgba(32, 32, 32, 0.33); display: inline-block; cursor: pointer;
     &:hover {background-color: #950000; color: #fff;}
 }
-.button-secondary {background: #fff; color: #202020; padding: 13px 16px 12px 17px; border-radius: 4px; border: 1px solid #202020; font-weight: bold; font-size: 16px; line-height: 20px; display: inline-block; cursor: pointer;
+.button-secondary {background: #fff; color: #202020; padding: 14px 22px 12px 22px; border-radius: 4px; border: 1px solid #202020; font-weight: bold; font-size: 16px; line-height: 20px; display: inline-block; cursor: pointer;
     &:hover {background-color: #202020; color: #fff;}
 }
 
